--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@microsoft/signalr": "^8.0.0",
     "bootstrap": "^3.4.1",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
